[tool.poetry]
name = "divevision"
version = "0.1.0"
description = ""
authors = ["Alexandre <alexandredothennequin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
numpy = "^2.1.2"
torchvision = "^0.19.1"
scikit-image = "^0.24.0"
tqdm = "^4.67.1"
fastapi = {extras = ["standard"], version = "^0.115.7"}
mlflow = "^2.20.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"
black = "^24.10.0"
pytest-cov = "^6.0.0"
psycopg2 = "^2.9.10"
boto3 = "^1.37.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
